# 51-towed-sonar-eq

./: CMakeLists.txt  README.md
include/: acoustic_ray_tracer.h  cma_equalizer.h  doppler_resampler.h  hydrophone_unpacker.h  sonar_types.h  spectrum_engine.h
python/: bindings.cpp
src/: acoustic_ray_tracer.cpp  cma_equalizer.cpp  doppler_resampler.cpp  hydrophone_unpacker.cpp  spectrum_engine.cpp
tests/: CMakeLists.txt  generate_test_data.cpp  test_cma_equalizer.cpp  test_doppler_spectrum.cpp  test_hydrophone_unpacker.cpp  test_python.py  test_utils.cpp  test_utils.h
